// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collects coverage only from multiple specified files 1`] = `
--------------|---------|----------|---------|---------|-------------------
File          | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------|---------|----------|---------|---------|-------------------
All files     |     100 |      100 |     100 |     100 |                   
 file.js      |     100 |      100 |     100 |     100 |                   
 otherFile.js |     100 |      100 |     100 |     100 |                   
--------------|---------|----------|---------|---------|-------------------
`;

exports[`collects coverage only from specified file 1`] = `
----------|---------|----------|---------|---------|-------------------
File      | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
----------|---------|----------|---------|---------|-------------------
All files |     100 |      100 |     100 |     100 |                   
 file.js  |     100 |      100 |     100 |     100 |                   
----------|---------|----------|---------|---------|-------------------
`;

exports[`collects coverage only from specified files avoiding dependencies 1`] = `
----------|---------|----------|---------|---------|-------------------
File      | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
----------|---------|----------|---------|---------|-------------------
All files |    87.5 |      100 |      50 |     100 |                   
 sum.js   |    87.5 |      100 |      50 |     100 |                   
----------|---------|----------|---------|---------|-------------------
`;

exports[`outputs coverage report 1`] = `
-------------------------------------|---------|----------|---------|---------|-------------------
File                                 | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------------------------------|---------|----------|---------|---------|-------------------
All files                            |      60 |        0 |      50 |      60 |                   
 coverage-report                     |   47.37 |        0 |      25 |      50 |                   
  file.js                            |     100 |      100 |     100 |     100 |                   
  notRequiredInTestSuite.js          |       0 |        0 |       0 |       0 | 8-19              
  otherFile.js                       |     100 |      100 |     100 |     100 |                   
  sum.js                             |    87.5 |      100 |      50 |     100 |                   
  sumDependency.js                   |       0 |        0 |       0 |       0 | 8-12              
 coverage-report/cached-duplicates/a |     100 |      100 |     100 |     100 |                   
  identical.js                       |     100 |      100 |     100 |     100 |                   
 coverage-report/cached-duplicates/b |     100 |      100 |     100 |     100 |                   
  identical.js                       |     100 |      100 |     100 |     100 |                   
-------------------------------------|---------|----------|---------|---------|-------------------
`;
